--- a/app/src/app/components/blocks/news-block/news-block.component.scss
+++ b/app/src/app/components/blocks/news-block/news-block.component.scss
@@ -14,3 +14,11 @@
 .content-wrapper {
   box-shadow: 0px 0.0375em 0.125em 0px;
 }
+
+
+
+
+
+/* Mobile styles
+ *============================================================================*/
+
