--- a/app/src/app/components/blocks/two-block-text/two-block-text.component.scss
+++ b/app/src/app/components/blocks/two-block-text/two-block-text.component.scss
@@ -22,6 +22,10 @@
 
 
 
+
+/* Mobile styles
+ *============================================================================*/
+
 @media (max-width: 900px)  {
   .info {
     font-size: 20px;
