--- a/app/src/app/components/blocks/news-block/news-block.component.scss
+++ b/app/src/app/components/blocks/news-block/news-block.component.scss
@@ -7,12 +7,16 @@
 
 .wrapper {
   width: 100%;
-  border: 1px solid rgb(102, 102, 102);;
+  transition: all .3s ease-in-out;
 }
 
 
 .content-wrapper {
   box-shadow: 0px 0.0375em 0.125em 0px;
+}
+
+.wrapper:hover {
+  box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 }
 
 
@@ -21,4 +25,5 @@
 
 /* Mobile styles
  *============================================================================*/
+
 
